# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  PROGRESS.txt  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20221025135637_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  init_db_no_vars.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
